Fix z-index title

--- a/src/app.scss
+++ b/src/app.scss
@@ -10555,7 +10555,7 @@ body {
 	text-align: center;
 	text-shadow: -2px 2px #4d1313;
 	word-spacing: 1.2rem;
-	z-index: 99;
+	// z-index: 99;
 }
 .ms_site-wrapper header .ms_jumbotron .carousel .ms_title span {
 	// font-size: 7rem;
